2011-05-05  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc (dll_crt0_1): Reset locale to "C" even when dynamically
	loaded.

2011-05-05  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* posix.sgml (std-notimpl): Remove bsd_signal, setcontext, and
	swapcontext, marked obsolete in SUSv3 and not present in SUSv4.

2011-05-05  Christian Franke  <franke@computer.org>

	* fhandler_registry.cc (fhandler_registry::exists): Fix regression
	in EACCES handling.
	(fhandler_registry::open): Fix "%val" case.

2011-05-04  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* signal.cc (_pinfo::kill): Return success on kill(0) only if pid
	exists or is in PID_EXITED state.  Report pid 0 when pid does not exist
	rather than pid -1.  Make debug output reflect actual function call.
	* sigproc.cc (stopped_or_terminated): Set process state to reaped when
	we've finished waiting for it.
	* include/sys/cygwin.h (PID_REAPED): New enum.

2011-05-04  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* cygwin.din (psiginfo): Export.
	(psignal): Export.
	(sys_siglist): Export.
	* posix.sgml (std-notimpl): Move psiginfo and psignal from here...
	(std-susv4): ... to here.
	(std-deprec): Add sys_siglist.
	* strsig.cc (sys_siglist): New array.
	(psiginfo): New function.
	* include/cygwin/signal.h (sys_siglist): Declare.
	(psiginfo): Declare.
	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Bump.

2011-05-04  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* dll_list::detach (dll_list::detach): Avoid doing anything with detach
	during a failing fork.

2011-05-04  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* dll_init.cc (dll_global_dtors): Avoid calling destructors during
	failing fork().

2011-05-04  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (class fhandler_base): Remove uninterruptible_io status
	flag.
	(fhandler_base::ready_for_read): Remove declaration.
	(fhandler_socket::ready_for_read): Ditto.
	(fhandler_pipe::ready_for_read): Ditto.